updated starter code to include TE provided frontend

--- a/vue/.env
+++ b/vue/.env
@@ -1,5 +1,5 @@
-# Java
-VUE_APP_REMOTE_API=http://localhost:8080
+# To use your server, uncomment this line.
+# VUE_APP_REMOTE_API=http://localhost:9000/
 
-# .NET
-VUE_APP_REMOTE_API=https://localhost:44315
+# To use the server hosted by TE-Alumni-Success, uncomment this line.
+# VUE_APP_REMOTE_API=https://bird-backend-d3a95583b08e.herokuapp.com
